# chatbot-inertia

./: .copier-answers.yml  docker-compose.yaml  docker_startup.sh  manage.py  package-lock.json  package.json  prod.Dockerfile  pyproject.toml  tsconfig.json  vite.config.js
apps/chat/: api.py  forms.py  models.py  rag.py  schemas.py  signals.py  tasks.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/contas/: forms.py  models.py  urls.py  views.py
apps/contas/migrations/: 0001_initial.py
core/: api.py  middleware.py  settings.py  settings_production.py  urls.py  utils.py
frontend/: base.html  tsconfig.json  tsconfig.node.json
frontend/css/: main.css  tailwind.css
frontend/js/: main.js
frontend/js/components/: Layout.vue  LayoutAnonimo.vue
frontend/js/components/Chat/: Mensagem.vue  MensagemBot.vue  MensagemUsuario.vue
frontend/js/components/form/: DjangoForm.vue  FormField.vue
frontend/js/components/form/inputs/: InputBase.vue  InputWithIcon.vue  TextareaField.vue
frontend/js/pages/: Index.vue
frontend/js/pages/Chat/: Chat.vue  ChatAnonimo.vue
frontend/js/pages/Contas/: Login.vue
frontend/js/types/: djangoForm.ts  index.ts
